# nightmare

./: .gitignore  README.md  pyproject.toml
notes/: assembly.md  gdb.md  intro.md
workdir/: loop.asm  loop.c
workdir/assembly/: fib.s  helloworld.s  loops.s
workdir/assembly/intro_x86/: hello_world.asm  hello_world.c  if_then.asm  if_then.c
workdir/ctf/01-beginner_re/csaw18_x86tour_pt1/: README.md
workdir/ctf/01-beginner_re/csaw19_beleaf/: beleaf.c
workdir/ctf/01-beginner_re/helithumper_re/: rev.c
workdir/ctf/02-stack_buffer_overflow/04-bof_variable/csaw18_boi/: solve.py
workdir/ctf/02-stack_buffer_overflow/04-bof_variable/tamu19_pwn1/: solve.py
workdir/ctf/02-stack_buffer_overflow/04-bof_variable/tw17_justdoit/: solve.py
workdir/ctf/02-stack_buffer_overflow/05-bof_callfunction/csaw16_warmup/: payload.txt  solve.py  warmup.c
workdir/ctf/03-beginner_re/csaw19_beleaf/: get_flag.py
workdir/ctf/03-beginner_re/helithumper_re/: flag.py  rev.c
workdir/ctf/hackaday-u/: README.md
workdir/ctf/hackaday-u/session-1/: README.md
workdir/ctf/hackaday-u/session-1/assembly/: README.md
workdir/ctf/hackaday-u/session-1/elf-exercises/: README.md
workdir/ctf/hackaday-u/session-1/source/: c1.c  c3.c  c4.c
workdir/ctf/hackaday-u/session-2/exercises/: QUESTIONS.md  README.md  solve_array.py  solve_variables.py
workdir/ctf/hackaday-u/session-3/: EXERCISES.md  README.md  files.h  gen_passwd.c  gen_passwd_files.c  gen_passwd_pointers.c  pword.z  syscalls.txt  uname.x
workdir/ctf/hackaday-u/session-4/exercises/crackmes.one/: README.md  decrypt_mbtu.c  fake  (+9 more)
(+10 files in other folders)
