[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightmare"
version = "0.1.0"
description = "Learning from guyinatuxedo/nightmare Reverse Engineering CTFs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mateus Marques", email = "marqsm.at.arch@gmail.com"},
]
classifiers = [
    "Intended Audience :: Security Researchers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "pwntools>=4.0.0",
]

#[project.optional-dependencies]
#dev = [
#    "pytest",
#    "pytest-cov",
#    "black",
#    "flake8",
#    "mypy",
#]
#full = [
#    "ropgadget",
#    "angr",
#    "unicorn",
#    "capstone",
#    "keystone-engine",
#    "pyelftools",
#    "r2pipe",
#]

[project.urls]
Homepage = "https://github.com/matmarqs/nightmare"
Documentation = "https://github.com/matmarqs/nightmare#readme"
Issues = "https://github.com/matmarqs/nightmare/issues"
